[gd_scene load_steps=24 format=3 uid="uid://dqdntyvt2fvoe"]

[ext_resource type="Script" path="res://Scripts/grassland.gd" id="1_ain8x"]
[ext_resource type="PackedScene" uid="uid://f3a66bsikmbv" path="res://Scenes/tile_map.tscn" id="2_e0k1b"]
[ext_resource type="PackedScene" uid="uid://xfjxnhtw5xl2" path="res://Scenes/fact_sheet.tscn" id="4_5ky70"]
[ext_resource type="PackedScene" uid="uid://bmrnk3ru2plwt" path="res://Scenes/player.tscn" id="5_b0taj"]
[ext_resource type="PackedScene" uid="uid://db08w17rnapl8" path="res://Scenes/watercan.tscn" id="5_vtth3"]
[ext_resource type="PackedScene" uid="uid://c6vupkswnictk" path="res://Scenes/day_night_cycle.tscn" id="5_y4fy5"]
[ext_resource type="Texture2D" uid="uid://cttdwe27kgmjw" path="res://Sprites/Flower 10 - PURPLE.png" id="6_fsilk"]
[ext_resource type="Script" path="res://Scenes/Rose.gd" id="6_paa61"]
[ext_resource type="Texture2D" uid="uid://c6bkgamn7s8i4" path="res://Sprites/flowers edit-Photoroom.png" id="6_uwi86"]
[ext_resource type="PackedScene" uid="uid://de8172uixl7cs" path="res://Scenes/weather_control.tscn" id="9_oojwh"]
[ext_resource type="PackedScene" uid="uid://svid725dhw44" path="res://Scenes/weatherChanger.tscn" id="10_0ribe"]
[ext_resource type="PackedScene" uid="uid://bj15hx7t0fuc3" path="res://Scenes/day_night_changer.tscn" id="12_uj32r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gjc4d"]
size = Vector2(18, 6)

[sub_resource type="GDScript" id="GDScript_ayfgv"]
script/source = "extends Area2D
@export_file(\"*tscn\") var next_scene
# Called when the node enters the scene tree for the first time.


"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mnulc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yd1sl"]
atlas = ExtResource("6_uwi86")
region = Rect2(8, 8, 208, 208)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwg2c"]
atlas = ExtResource("6_uwi86")
region = Rect2(219, 8, 208, 208)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1j73"]
atlas = ExtResource("6_uwi86")
region = Rect2(430, 8, 208, 208)

[sub_resource type="AtlasTexture" id="AtlasTexture_a60wm"]
atlas = ExtResource("6_uwi86")
region = Rect2(641, 8, 208, 208)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pwlk"]
atlas = ExtResource("6_uwi86")
region = Rect2(852, 8, 208, 208)

[sub_resource type="AtlasTexture" id="AtlasTexture_6801v"]
atlas = ExtResource("6_uwi86")
region = Rect2(1063, 8, 208, 208)

[sub_resource type="SpriteFrames" id="SpriteFrames_ikf3r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yd1sl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwg2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1j73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a60wm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pwlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6801v")
}],
"loop": true,
"name": &"RoseGrowth",
"speed": 0.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_flp42"]
radius = 9.21954

[node name="Grassland" type="Node2D"]
y_sort_enabled = true
position = Vector2(300, 300)
script = ExtResource("1_ain8x")

[node name="TileMap" parent="." instance=ExtResource("2_e0k1b")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FactSheet" parent="CanvasLayer" instance=ExtResource("4_5ky70")]
visible = false
position = Vector2(763, 82)
scale = Vector2(0.4, 0.4)

[node name="Player" parent="." instance=ExtResource("5_b0taj")]
position = Vector2(61, 11)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(4, 4)
limit_left = 200
limit_top = 200
limit_right = 915
limit_bottom = 580
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="Day_Night_Cycle" parent="Player/Camera2D" instance=ExtResource("5_y4fy5")]
position = Vector2(-61, -11)

[node name="WeatherControl" parent="Player" instance=ExtResource("9_oojwh")]
position = Vector2(0, -104)

[node name="Flower" type="Area2D" parent="."]
position = Vector2(63, 61)

[node name="Sprite2D" type="Sprite2D" parent="Flower"]
position = Vector2(0, -6)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_fsilk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flower"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_gjc4d")
disabled = true

[node name="Forest_Enter" type="Area2D" parent="."]
y_sort_enabled = true
position = Vector2(152, -82)
script = SubResource("GDScript_ayfgv")
next_scene = "res://Scenes/forest.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Forest_Enter"]
shape = SubResource("RectangleShape2D_mnulc")

[node name="Watercan" parent="." instance=ExtResource("5_vtth3")]
z_index = 1
y_sort_enabled = true
position = Vector2(122, -25)

[node name="Rose" type="StaticBody2D" parent="."]
z_index = 1
position = Vector2(168, -45)
script = ExtResource("6_paa61")

[node name="RoseAnimation" type="AnimatedSprite2D" parent="Rose"]
scale = Vector2(0.05, 0.05)
sprite_frames = SubResource("SpriteFrames_ikf3r")
animation = &"RoseGrowth"

[node name="Area2D" type="Area2D" parent="Rose"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rose/Area2D"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_flp42")
debug_color = Color(0.188235, 0.611765, 0.560784, 0.419608)

[node name="GrowTimer" type="Timer" parent="Rose"]

[node name="Weather Changer" parent="." instance=ExtResource("10_0ribe")]
position = Vector2(134, 27)

[node name="DayNightChanger" parent="." instance=ExtResource("12_uj32r")]
position = Vector2(85, 32)

[connection signal="body_entered" from="Forest_Enter" to="." method="_on_forest_enter_body_entered"]
[connection signal="area_entered" from="Rose/Area2D" to="Rose" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Rose/Area2D" to="Rose" method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Rose/Area2D" to="Rose" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Rose/Area2D" to="Rose" method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Rose/GrowTimer" to="Rose" method="_on_grow_timer_timeout"]
